kubes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
  namespace: q-personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: personal-website
    spec:
      containers:
        - name: nginx
          image: theenbyperor/personal-website:1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: personal-site-ingress
  namespace: q-personal
spec:
  rules:
  - host: magicalcodewit.ch
    http:
      paths:
      - backend:
          service:
            name: personal-site
            port:
              number: 80
        path: /
        pathType: Prefix
      - path: /.well-known/webfinger
        pathType: Exact
        backend: 
          service:
            name: mastodon
            port:
              number: 80
  - host: www.magicalcodewit.ch
    http:
      paths:
      - backend:
          service:
            name: personal-site
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: misell.cymru
    http:
      paths:
      - backend:
          service:
            name: personal-site
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.misell.cymru
    http:
      paths:
      - backend:
          service:
            name: personal-site
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - magicalcodewit.ch
    - www.magicalcodewit.ch
    secretName: personal-site-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: personal-site
  name: personal-site
  namespace: q-personal
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
  selector:
    app: personal-website
---
kind: Service
apiVersion: v1
metadata:
  name: mastodon
  namespace: q-personal
spec:
  type: ExternalName
  externalName: nginx.toot.svc.kube-cluster.as207960.net
  ports:
  - port: 80
